# fastapi-vue

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
backend_api/: pyproject.toml  requirements.txt  run.sh
backend_api/backend_api/: __init__.py  __main__.py  app.py  config.py  crud.py  database.py  database_connection.py  database_models.py  dummy_data_loader.py  exc.py  log_setup.py  pydantic_schemas.py  utils.py
backend_api/backend_api/crud/: crud.py  employees.py  practice_addresses.py  practices.py  staging_changes.py  staging_employees.py  staging_practices.py
backend_api/backend_api/rest/: access_systems.py  change_requests.py  employees.py  gp_employees.py  gp_practices.py  practice_addresses.py  practices.py  staging_changes.py  staging_employees.py  staging_practices.py
backend_api/tests/: docker-compose.yml  test_backend_api.py
docs/: database_design.dbdiagramio  database_design.sql
frontend_gui/practice-manager/: .env.production  README.md  package-lock.json  package.json
frontend_gui/practice-manager/src/: App.vue  api.js  env.js  main.js
frontend_gui/practice-manager/src/components/: AddMainPartnerModal.vue  DetailsAddressesForm.vue  DetailsGeneralForm.vue  EmployeeApprovalsTable.vue  EmployeeEditModal.vue  EmployeesList.vue  (+15 more)
mock_data/: addresses.json  employees.json  gp_addresses.json  gp_employees.json  gp_practice_employees.json  gp_practices.json  gp_practices_system_types.json  ip_ranges.json  job_titles.json  output_addresses.json  practice_managers.json  practices.json  system_types.json
(+23 files in other folders)
