[tool.poetry]
name = "backend_api"
version = "0.1.0"
description = ""
authors = ["Vince Chan <vince.chan@mclaren.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"
SQLAlchemy = "^1.3.17"
PyMySQL = "^0.9.3"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
cryptography = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
app = "backend_api.__main__:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
